--- a/.github/workflows/hyperlinks.yaml
+++ b/.github/workflows/hyperlinks.yaml
@@ -27,4 +27,7 @@ jobs:
 
      - name: Check Hyperlinks in Jupyter Notebooks
        run: >
-         poetry run -- pytest --check-links --check-links-ignore "https://www.transtats.bts.gov/.*" exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/
+         poetry run -- pytest --check-links
+         --check-links-ignore https://www.transtats.bts.gov
+         --check-links-ignore https://jupysql.ploomber.io
+         exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/
