--- a/.github/workflows/hyperlinks.yaml
+++ b/.github/workflows/hyperlinks.yaml
@@ -19,8 +19,9 @@ jobs:
          python-version: "3.10"
 
      - name: Check Hyperlinks in Documentation
+       # Ignored URLs are in file .lycheeignore
        id: lychee
-       uses: lycheeverse/lychee-action@v1.9.0
+       uses: lycheeverse/lychee-action@v2.0.2
        with:
          fail: true
          args: --exclude localhost --verbose --no-progress 'doc/**/*.md' 'README.md'
@@ -29,5 +30,4 @@ jobs:
        run: >
          poetry run -- pytest --check-links
          --check-links-ignore https://www.transtats.bts.gov
-         --check-links-ignore https://jupysql.ploomber.io
          exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/
